finished page - added Ingredients and Recipe

--- a/recipes/Dampfnudeln.html
+++ b/recipes/Dampfnudeln.html
@@ -7,9 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><h1>Dampfnudeln</h1></li>
-        <li><h1>Weißwurst</h1></li>
-    </ul>
+    <h1>Dampfnudeln</h1>
+    <img src="../img/dampfnudeln_mit_vanillesosse.jpg">
+    <h2>Description</h2>
+    <p>A 'Dampfnudel'(literal: steam noodle) is a typical dish of southern Germany. It is best served with Vanilla sauce and cranberry jam</p>
+    <h2>Ingredients</h2>
+    
+        <h3>For vanilla sauce</h3>
+        <ul>
+            <li>½ cup milk</li>
+            <li>½ cup heavy cream double cream</li> 
+            <li>1 egg yolk</li>
+            <li>2 tablespoon sugar</li>
+            <li>½ vanilla pod</li>
+            <li>½ teaspoon cornstarch corn flour (if needed)</li>
+        </ul>
+        <h3>For dampfnudel (dumplings)</h3>
+        <ul>
+            <li>½ cup milk</li>
+            <li>2 tablespoon unsalted butter</li>
+            <li>1 ¾ cups all purpose flour plain flour</li>
+            <li>1 teaspoon instant dried yeast</li>
+            <li>¼ teaspoon salt</li>
+            <li>2 tablespoon sugar</li>
+            <li>1 egg</li>
+        </ul>
+        <h3>To cook dampfnudel</h3>
+        <ul>
+            <li>5 tablespoon milk (5tbsp is ¼ cup plus 1 tbsp)</li>
+            <li>1 tablespoon unsalted butter</li>
+            <li>1 tablespoon sugar</li>
+        </ul>
+    <h2>Instructions</h2>
+
+        <h3>To make vanilla sauce (can do ahead or while dough on 2nd rise - see step below)</h3>
+        <ol>
+            <p><li>Put the milk, cream and sugar in a small pan and stir. Split open the half vanilla pod and scrape out the seeds into the cream mixture. Put the pod in as well and warn the mixture over a medium-low heat to bring the mixture almost to a simmer.</li></p>
+            <p><li>Break up the egg yolk in a small bowl and mix in the cornstarch until smooth. Once the cream mixture is almost at a simmer, add a tablespoon of the warm cream to the egg yolk to temper it. Stir in then repeat another two times then tip all of the mixture back in to the cream.</li></p> 
+            <p><li>Continue to warm the cream gently without it boiling until it starts to thicken slightly. Remove from the heat and set aside. You can make this ahead and either warm or serve it cold. If made more than around 1 hour ahead, chill and store in the fridge (can make a day or two ahead).</li></p>
+        </ol> 
+        <h3>To make dampfnudel</h3>
+        <ol>
+            <p><li>Gently warm the milk and butter together either in a small pan or in the microwave just enough to melt the butter. If it is more than lukewarm, leave to cool slightly before using.</li></p> 
+            <p><li>Mix together the flour, yeast, salt and sugar in a bowl. Add the milk mixture and egg and mix everything so that it comes together as a ball of dough. Lightly flour a clean work surface and turn the dough out onto it.</li></p>
+            <p><li>Gently knead the dough, adding a little extra flour if needed, for a couple minutes until it is smooth. Form it into a ball and place in a lightly oiled bowl. Cover and leave the dough to rise around an hour.</li></p>
+            <p><li>Gently knock back the dough and divide the dough into four. Form each piece into a ball, by pinching in the sides then rounding in your hand (see photo above).</li></p>
+            <p><li>Place the balls of dough, join side down, in a dish or on a baking sheet, cover and leave to rise again around another hour. Meanwhile make the vanilla sauce, if not made ahead (see above).</li></p>
+        </ol>
+        <h3>Cooking dampfnudel</h3>
+        <ol>
+            <p><li>Once the dough has risen, warm the milk, butter and sugar for cooking the dampfnudel in a pan just a little larger than the four balls of dough over a medium-low heat.</li></p>
+            <p><li>Once the sugar has dissolved, carefully lower the dumplings into the liquid so that they sit next to each other, flat on the bottom of the pan.</li></p>
+            <p><li>Cover the pan and leave to steam over a low heat for around 20-25 minutes, checking there is still a little liquid towards the end to save them burning.</li></p>
+            <p><li>Finish with a couple minutes without the lid on then serve, topped with the vanilla sauce and compote/jam, if using.</li></p>
+        </ol>
+    <a href="#top">back to top of page</a>
+    <p></p>
+    <a href="../index.html">back to main page</a>
 </body>
 </html>
