Finish Weisswurst page

--- a/recipes/Weisswurst.html
+++ b/recipes/Weisswurst.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Weisswurst</h1>
+    <img src="../img/Weisswurst.jpg" alt="a pfundige Weisse">
+    <h2>Ingredients</h2>
+        <ul>
+            <li>salt</li>
+            <li>8 white sausages</li>
+            <li>4 Prezels</li>
+            <li>4 tsp sweet mustard</li>
+        </ul>
+    <h2>Instructions</h2>
+        <ol>
+            <p><li>Boil a large pot of water with oen tsp of salt. Reduce heat and add the sausages. Let them sit for 5 minutes</li></p>
+            <p><li>Remove sausages from water and serve with Prezels and bavarian sweet mustard</li></p>
+        </ol>
+    <a href="#top">back to top of page</a>
+    <p></p>
+    <a href="../index.html">back to main page</a>
 </body>
 </html>
