Fix typo, Make small stylistic change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-       <li><a href="recipes/Dampfnudeln.html">Dampfnudeln </a></li>
-       <li><a href="recipes/Weisswurst.html">Weisswurst</a></li>
+       <p><li><a href="recipes/Dampfnudeln.html">Dampfnudeln </a></li></p>
+       <p><li><a href="recipes/Weisswurst.html">Weisswurst</a></li></p>
     </ul>
 
 </body>
