--- a/recipes/Weisswurst.html
+++ b/recipes/Weisswurst.html
@@ -18,7 +18,7 @@
         </ul>
     <h2>Instructions</h2>
         <ol>
-            <p><li>Boil a large pot of water with oen tsp of salt. Reduce heat and add the sausages. Let them sit for 5 minutes</li></p>
+            <p><li>Boil a large pot of water with one tsp of salt. Reduce heat and add the sausages. Let them sit for 5 minutes</li></p>
             <p><li>Remove sausages from water and serve with Prezels and bavarian sweet mustard</li></p>
         </ol>
     <a href="#top">back to top of page</a>
